# mar-eval

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: adult_chest_spinal_rod.yaml  chest_spinal_rod.yaml
examples/: 1_intro_to_mar_eval.ipynb  2_cho_auc_analysis.ipynb  3_bias_and_statistical_comparison.ipynb  mar_eval_demo.ipynb  synthetic_demo.py
mareval/: __init__.py  cho.py  grid.py  io_sim.py  reporting.py  roi.py  stats.py  viz.py
notebooks/: annex_gg_full_demo.ipynb  chest_spinal_rod_validation.ipynb
notebooks/outputs/: auc_fbp.csv  auc_mar.csv  delta_auc.csv
outputs/: auc_table.csv  delta_auc_table.csv
tests/: test_mareval_basic.py  test_pipeline_smoke.py
